# fastApiTest

./: .env  .env-render  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 6db59aac8ef2_img_text.py  7d97ebdd270d_.py  88a2d287c821_add_users.py  ac2e9d1c68bf_img_size_largest_more.py  ca90c7663fe9_.py  d58d5f8c83fe_img_size_largest.py  d769b6e51ccd_.py  e91c26b8f786_add_tables.py  ec7878629fb1_add_user.py
src/: database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py  utils.py
src/friends/: modles.py  shemas.py
src/posts/: models.py  shemas.py
