[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Wolahi <tort12345y@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.95.1"
SQLAlchemy = "^2.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
